[gd_scene load_steps=58 format=3 uid="uid://dx2q4h865l1jt"]

[ext_resource type="Script" path="res://Scenes/Enemies/Chase/king_sigma.gd" id="1_fnedy"]
[ext_resource type="Texture2D" uid="uid://b82pu1il8jriu" path="res://Scenes/Enemies/Areachase/KingSigma/idle-nugget.png" id="2_3ow0g"]
[ext_resource type="AudioStream" uid="uid://dokv1be02n5ut" path="res://Sounds/SFX/Monster/Slime/Slime dead var 2.mp3" id="3_5oebj"]
[ext_resource type="AudioStream" uid="uid://bpr0nhxsu32fe" path="res://Sounds/SFX/Monster/Slime/Slime jump var 2.mp3" id="4_ee7vk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c65wf"]
atlas = ExtResource("2_3ow0g")
region = Rect2(86, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7koe"]
atlas = ExtResource("2_3ow0g")
region = Rect2(172, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbyri"]
atlas = ExtResource("2_3ow0g")
region = Rect2(258, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_45cju"]
atlas = ExtResource("2_3ow0g")
region = Rect2(344, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4l7v"]
atlas = ExtResource("2_3ow0g")
region = Rect2(430, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_txftr"]
atlas = ExtResource("2_3ow0g")
region = Rect2(516, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex7u3"]
atlas = ExtResource("2_3ow0g")
region = Rect2(602, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_t03eb"]
atlas = ExtResource("2_3ow0g")
region = Rect2(688, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh7gp"]
atlas = ExtResource("2_3ow0g")
region = Rect2(774, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqfp7"]
atlas = ExtResource("2_3ow0g")
region = Rect2(860, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_00iw7"]
atlas = ExtResource("2_3ow0g")
region = Rect2(946, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh2u8"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1032, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_cktul"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1118, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pmga"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1204, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_emn4q"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1290, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_8klgp"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1376, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtncd"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1462, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_60l3n"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1548, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2qcy"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1634, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_y75pe"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1720, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie4qv"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1806, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkat5"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1892, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgp63"]
atlas = ExtResource("2_3ow0g")
region = Rect2(0, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_hare7"]
atlas = ExtResource("2_3ow0g")
region = Rect2(86, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljxfu"]
atlas = ExtResource("2_3ow0g")
region = Rect2(172, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhtje"]
atlas = ExtResource("2_3ow0g")
region = Rect2(258, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_btam2"]
atlas = ExtResource("2_3ow0g")
region = Rect2(344, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_owf3w"]
atlas = ExtResource("2_3ow0g")
region = Rect2(430, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppsqi"]
atlas = ExtResource("2_3ow0g")
region = Rect2(516, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_duh4j"]
atlas = ExtResource("2_3ow0g")
region = Rect2(602, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5osi"]
atlas = ExtResource("2_3ow0g")
region = Rect2(688, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dgai"]
atlas = ExtResource("2_3ow0g")
region = Rect2(774, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_caklf"]
atlas = ExtResource("2_3ow0g")
region = Rect2(860, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w4tw"]
atlas = ExtResource("2_3ow0g")
region = Rect2(946, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fs0v"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1032, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd7tl"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1118, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe02e"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1204, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ek54"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1290, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_abt21"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1376, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq7hk"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1462, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jt3s"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1548, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhi50"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1634, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jnit"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1720, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6lri"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1806, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvowg"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1892, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce0hl"]
atlas = ExtResource("2_3ow0g")
region = Rect2(1978, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dqtu"]
atlas = ExtResource("2_3ow0g")
region = Rect2(2064, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr818"]
atlas = ExtResource("2_3ow0g")
region = Rect2(2150, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pfw2"]
atlas = ExtResource("2_3ow0g")
region = Rect2(2236, 0, 86, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivmd7"]
atlas = ExtResource("2_3ow0g")
region = Rect2(2322, 0, 86, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lt2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c65wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7koe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbyri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45cju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4l7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txftr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex7u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t03eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh7gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqfp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00iw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh2u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cktul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pmga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emn4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8klgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtncd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60l3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2qcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y75pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie4qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkat5")
}],
"loop": true,
"name": &"attack",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c65wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7koe")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgp63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hare7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljxfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhtje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btam2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owf3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppsqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duh4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5osi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dgai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caklf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w4tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fs0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd7tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe02e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ek54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abt21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq7hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jt3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhi50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jnit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6lri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvowg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce0hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dqtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr818")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pfw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivmd7")
}],
"loop": true,
"name": &"idle",
"speed": 27.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jklf"]
size = Vector2(46, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_vw7mb"]
radius = 34.5145

[node name="KingSigma" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_fnedy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -43)
sprite_frames = SubResource("SpriteFrames_8lt2b")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -25.5)
shape = SubResource("RectangleShape2D_0jklf")

[node name="Timer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="." groups=["attack"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, -24)
shape = SubResource("CircleShape2D_vw7mb")
debug_color = Color(0.774743, 0.419454, 0.37698, 0.42)

[node name="AudioStreamPlayer_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5oebj")

[node name="AudioStreamPlayer_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ee7vk")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
